Change theme name
(Old svn revision: 3376)

--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,6 @@ panel/Makefile
 plugins/Makefile
 plugins/mailcheck/Makefile
 themes/Makefile
-themes/Bluecurve/Makefile
+themes/Curve/Makefile
 themes/Gnome/Makefile
 ])
