--- a/themes/Makefile.in
+++ b/themes/Makefile.in
@@ -92,7 +92,7 @@ am__quote = @am__quote@
 install_sh = @install_sh@
 SUBDIRS = \
 Gnome \
-Bluecurve
+Curve
 
 subdir = themes
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
