Make the clock a plugin
(Old svn revision: 3383)

--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,7 @@ icons/Makefile
 panel/Makefile
 plugins/Makefile
 plugins/mailcheck/Makefile
+plugins/clock/Makefile
 themes/Makefile
 themes/Curve/Makefile
 themes/Gnome/Makefile
