--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -91,7 +91,8 @@ am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
 SUBDIRS = \
-mailcheck
+mailcheck \
+clock
 
 subdir = plugins
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
