Make trash can a plugin
(Old svn revision: 3385)

--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,7 @@ panel/Makefile
 plugins/Makefile
 plugins/mailcheck/Makefile
 plugins/clock/Makefile
+plugins/trash/Makefile
 themes/Makefile
 themes/Curve/Makefile
 themes/Gnome/Makefile
