--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -92,7 +92,8 @@ am__quote = @am__quote@
 install_sh = @install_sh@
 SUBDIRS = \
 mailcheck \
-clock
+clock \
+trash
 
 subdir = plugins
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
