--- a/plugins/clock/Makefile.in
+++ b/plugins/clock/Makefile.in
@@ -96,7 +96,7 @@ plugin_LTLIBRARIES = libclock.la
 libclock_la_LDFLAGS = "-module"
 
 libclock_la_SOURCES = \
-clock.c xfce_clock.c xfce_clock.h
+clock.c
 
 
 libclock_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\"
@@ -108,7 +108,7 @@ CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(plugin_LTLIBRARIES)
 
 libclock_la_DEPENDENCIES =
-am_libclock_la_OBJECTS = libclock_la-clock.lo libclock_la-xfce_clock.lo
+am_libclock_la_OBJECTS = libclock_la-clock.lo
 libclock_la_OBJECTS = $(am_libclock_la_OBJECTS)
 
 DEFS = @DEFS@
@@ -118,8 +118,7 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
-@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/libclock_la-clock.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/libclock_la-xfce_clock.Plo
+@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/libclock_la-clock.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -170,7 +169,6 @@ clean-pluginLTLIBRARIES:
 	  rm -f "$${dir}/so_locations"; \
 	done
 libclock_la-clock.lo: clock.c
-libclock_la-xfce_clock.lo: xfce_clock.c
 libclock.la: $(libclock_la_OBJECTS) $(libclock_la_DEPENDENCIES) 
 	$(LINK) -rpath $(plugindir) $(libclock_la_LDFLAGS) $(libclock_la_OBJECTS) $(libclock_la_LIBADD) $(LIBS)
 
@@ -181,7 +179,6 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libclock_la-clock.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libclock_la-xfce_clock.Plo@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
@@ -221,24 +218,6 @@ libclock_la-clock.lo: clock.c
 @AMDEP_TRUE@	depfile='$(DEPDIR)/libclock_la-clock.Plo' tmpdepfile='$(DEPDIR)/libclock_la-clock.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libclock_la_CFLAGS) $(CFLAGS) -c -o libclock_la-clock.lo `test -f 'clock.c' || echo '$(srcdir)/'`clock.c
-
-libclock_la-xfce_clock.o: xfce_clock.c
-@AMDEP_TRUE@	source='xfce_clock.c' object='libclock_la-xfce_clock.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@	depfile='$(DEPDIR)/libclock_la-xfce_clock.Po' tmpdepfile='$(DEPDIR)/libclock_la-xfce_clock.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libclock_la_CFLAGS) $(CFLAGS) -c -o libclock_la-xfce_clock.o `test -f 'xfce_clock.c' || echo '$(srcdir)/'`xfce_clock.c
-
-libclock_la-xfce_clock.obj: xfce_clock.c
-@AMDEP_TRUE@	source='xfce_clock.c' object='libclock_la-xfce_clock.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@	depfile='$(DEPDIR)/libclock_la-xfce_clock.Po' tmpdepfile='$(DEPDIR)/libclock_la-xfce_clock.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libclock_la_CFLAGS) $(CFLAGS) -c -o libclock_la-xfce_clock.obj `cygpath -w xfce_clock.c`
-
-libclock_la-xfce_clock.lo: xfce_clock.c
-@AMDEP_TRUE@	source='xfce_clock.c' object='libclock_la-xfce_clock.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@	depfile='$(DEPDIR)/libclock_la-xfce_clock.Plo' tmpdepfile='$(DEPDIR)/libclock_la-xfce_clock.TPlo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libclock_la_CFLAGS) $(CFLAGS) -c -o libclock_la-xfce_clock.lo `test -f 'xfce_clock.c' || echo '$(srcdir)/'`xfce_clock.c
 CCDEPMODE = @CCDEPMODE@
 
 mostlyclean-libtool:
