--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -1,4 +1,4 @@
-plugindir = $(pkgdatadir)/plugins
+plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libclock.la
 libclock_la_LDFLAGS = "-module"
@@ -6,5 +6,5 @@ libclock_la_LDFLAGS = "-module"
 libclock_la_SOURCES = \
 clock.c
 
-libclock_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\"
+libclock_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
 libclock_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
