--- a/plugins/mailcheck/Makefile.am
+++ b/plugins/mailcheck/Makefile.am
@@ -1,4 +1,4 @@
-plugindir = $(pkgdatadir)/plugins
+plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libmailcheck.la
 libmailcheck_la_LDFLAGS = "-module"
@@ -6,5 +6,5 @@ libmailcheck_la_LDFLAGS = "-module"
 libmailcheck_la_SOURCES = \
 mailcheck.c
 
-libmailcheck_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\"
+libmailcheck_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
 libmailcheck_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
