--- a/plugins/mailcheck/Makefile.in
+++ b/plugins/mailcheck/Makefile.in
@@ -90,7 +90,7 @@ X_PRE_LIBS = @X_PRE_LIBS@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
-plugindir = $(pkgdatadir)/plugins
+plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libmailcheck.la
 libmailcheck_la_LDFLAGS = "-module"
@@ -99,7 +99,7 @@ libmailcheck_la_SOURCES = \
 mailcheck.c
 
 
-libmailcheck_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\"
+libmailcheck_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
 libmailcheck_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
 subdir = plugins/mailcheck
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
