Make default theme a normal theme. Get rid of builtin icons
(Old svn revision: 3415)

--- a/themes/Makefile.in
+++ b/themes/Makefile.in
@@ -127,6 +127,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = \
+XFce \
 Gnome \
 Curve
 
