--- a/configure.ac
+++ b/configure.ac
@@ -41,7 +41,7 @@ dnl
 DEBUG=0
 AC_ARG_ENABLE(debug,
 		[  --enable-debug          debug mode (default disabled)],
-		[ AC_DEFINE(DEBUG, 1, "Mode debug") ],)
+		[ AC_DEFINE(DEBUG, 1, [Define to 1 for debug.]) ],)
 
 
 AC_SUBST(MY_SUBDIRS)
@@ -50,8 +50,19 @@ AC_SUBST(MY_SUBDIRS)
 GLIB_REQUIRED_VERSION=2.0.0
 GTK_REQUIRED_VERSION=2.0.0
 PANGO_REQUIRED_VERSION=1.0.0
+LIBXFCEGUI4_REQUIRED_VERSION=0.0.7
 
-PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION gmodule-2.0 libxml-2.0 libxfcegui4-1.0)
+AC_DEFINE_UNQUOTED(GLIB_REQUIRED_VERSION, $GLIB_REQUIRED_VERSION, [Define glib required version.])
+AC_DEFINE_UNQUOTED(GTK_REQUIRED_VERSION, $GTK_REQUIRED_VERSION, [Define gtk required version.])
+AC_DEFINE_UNQUOTED(PANGO_REQUIRED_VERSION, $PANGO_REQUIRED_VERSION, [Define pango required version.])
+AC_DEFINE_UNQUOTED(LIBXFCEGUI4_REQUIRED_VERSION, $LIBXFCEGUI4_REQUIRED_VERSION, [Define libxfcegui4 required version.])
+
+AC_SUBST(GLIB_REQUIRED_VERSION)
+AC_SUBST(GTK_REQUIRED_VERSION)
+AC_SUBST(PANGO_REQUIRED_VERSION)
+AC_SUBST(LIBXFCEGUI4_REQUIRED_VERSION)
+
+PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION gmodule-2.0 libxml-2.0 libxfcegui4-1.0 >= $LIBXFCEGUI4_REQUIRED_VERSION)
 
 ## libtool support (for plugins)
 AC_DISABLE_STATIC
