--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -7,13 +7,16 @@ URL: 		http://www.xfce.org/
 Source0: 	%{name}-%{version}.tar.gz
 Group: 		User Interface/Desktops
 BuildRoot: 	%{_tmppath}/%{name}-root
-Requires:	gtk2
-Requires:	glib2
-Requires:	pango
+Requires:	gtk2 >= @GTK_REQUIRED_VERSION@
+Requires:	glib2 >= @GLIB_REQUIRED_VERSION@
+Requires:	pango >= @PANGO_REQUIRED_VERSION@
+Requires:	libxfcegui4 >= @LIBXFCEGUI4_REQUIRED_VERSION@
 Requires:	libxml2
-BuildRequires: 	gtk2-devel >= 2.0.0
-BuildRequires: 	glib2-devel >= 2.0.0
-BuildRequires: 	pango-devel >= 1.0.0
+BuildRequires: 	gtk2-devel >= @GTK_REQUIRED_VERSION@
+BuildRequires: 	glib2-devel >= @GLIB_REQUIRED_VERSION@
+BuildRequires: 	pango-devel >= @PANGO_REQUIRED_VERSION@
+BuildRequires: 	libxfcegui4-devel >= @LIBXFCEGUI4_REQUIRED_VERSION@
+BuildRequires: 	libxml2-devel
 
 %description
 xfce4 is the panel for the XFce desktop environment
