Install default xfce4rc
(Old svn revision: 3435)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,11 @@
 @SET_MAKE@
 
 pkginfodir=$(pkgdatadir)
+confdir=$(sysconfdir)/xfce4
 
 pkginfo_DATA = AUTHORS COPYING ChangeLog
 
-noinst_DATA = example.xfce4rc
+conf_DATA = xfce4rc
 
 
 EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in autogen.sh
@@ -12,10 +13,10 @@ EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in autogen.sh
 SUBDIRS = @MY_SUBDIRS@
 
 distclean-local:
-	rm -rf example.xfce4rc xfce4.spec *.cache
+	rm -rf xfce4rc xfce4.spec *.cache
 
-example.xfce4rc:
-	@sed -e "s%_pkgdatadir_%$(pkgdatadir)%g" example.xfce4rc.in > example.xfce4rc
+xfce4rc:
+	@sed -e "s%_pkgdatadir_%$(pkgdatadir)%g" example.xfce4rc.in > xfce4rc
 
 rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
