Fix bug in wmhints and add mail icons to Curve theme
(Old svn revision: 3439)

--- a/themes/Curve/Makefile.am
+++ b/themes/Curve/Makefile.am
@@ -19,6 +19,9 @@ terminal.png \
 trash_empty.png \
 trash_full.png \
 unknown.png \
+newmail.png \
+nomail.png \
+oldmail.png \
 README
 
 EXTRA_DIST = $(curve_DATA)
