Add Crystal and Noia themes provided by Jeroen Vloothuis (aka slm on IRC)
(Old svn revision: 3440)

--- a/configure.ac
+++ b/configure.ac
@@ -78,7 +78,9 @@ plugins/mailcheck/Makefile
 plugins/clock/Makefile
 plugins/trash/Makefile
 themes/Makefile
+themes/Crystal/Makefile
 themes/Curve/Makefile
 themes/Gnome/Makefile
+themes/Noia/Makefile
 themes/XFce/Makefile
 ])
