--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,13 @@ Source: xfce4
 Section: x11
 Priority: optional
 Maintainer: Martin Loschwitz <madkiss@madkiss.org>
-Build-Depends: debhelper (>> 3.0.0), libatk1.0-dev, libglib2.0-dev, libgtk2.0-dev, libpango1.0-dev, libxfcegui-dev
-Standards-Version: 3.5.7
+Build-Depends: debhelper (>= 4.1.26), libatk1.0-dev, libglib2.0-dev, libgtk2.0-dev, libpango1.0-dev, libxfcegui4-0-dev
+Standards-Version: 3.5.8
 
 Package: xfce4
 Architecture: any
-Depends: ${shlibs:Depends}, xfce4-themes (= ${Source-Version})
+Depends: ${shlibs:Depends}
+Recommends: xfce4-themes (= ${Source-Version}), xfwm4, xfce4-utils, xfdeskmenu4, xffm4
 Description: The Cholesterol Free Desktop Environment (panel)
  Xfce, previously known as Xforms cool environment, is a desktop environment
  reminiscent of CDE that uses the GTK+ library, and isn't resource-hungry.
@@ -27,10 +28,10 @@ Description: Theme files for xfce4
 
 Package: xfce4-dev
 Architecture: any
-Depends: libxfcegui-dev
+Depends: libxfcegui4-0-dev
 Suggests: xfce4 (= ${Source-Version})
 Description: xfce4 development files
  This package contains the Xfce4 development files, mainly includes.
  Installing this package makes mainly sense for you if you plan to
  develop applications using xfce4 widgets. If you don't do, installing
- this package is probably useless.
+ this package is most probably useless.
