Add mail icons to Crystal and Noia themes. Thanks (again) to Jeroen Vloothuis
(Old svn revision: 3445)

--- a/themes/Crystal/Makefile.am
+++ b/themes/Crystal/Makefile.am
@@ -11,6 +11,9 @@ minilock.png \
 minipalet.png \
 minipower.png \
 multimedia.png \
+newmail.png \
+oldmail.png \
+nomail.png \
 network.png \
 paint.png \
 print.png \
