--- a/themes/Crystal/Makefile.in
+++ b/themes/Crystal/Makefile.in
@@ -143,6 +143,9 @@ minilock.png \
 minipalet.png \
 minipower.png \
 multimedia.png \
+newmail.png \
+oldmail.png \
+nomail.png \
 network.png \
 paint.png \
 print.png \
