--- a/themes/Noia/Makefile.in
+++ b/themes/Noia/Makefile.in
@@ -137,6 +137,9 @@ edit.png \
 file1.png \
 file2.png \
 games.png \
+newmail.png \
+oldmail.png \
+nomail.png \
 man.png \
 miniinfo.png \
 minilock.png \
