Huge update. Highlights: switcher plugin instead of central panel code. Side panels don't exist anymore; there is one list of panel groups. xfce.c split up into main and panel modules. New general header file xfce.h that includes all exported headers. New fixes and probably new bugs
(Old svn revision: 3446)

--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -133,7 +133,8 @@ target_alias = @target_alias@
 SUBDIRS = \
 mailcheck \
 clock \
-trash
+trash \
+switcher
 
 subdir = plugins
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
